# rust-rabbitmq

./: .env  Cargo.toml  README.md  build.rs  notes.norg
src/: cli.rs  config.rs  items.proto  lib.rs  log.rs  main.rs  message_types.rs
src/message_queue/: mod.rs  rabbit.rs
src/message_queue/rabbit/: chunk_receiver.rs  mod.rs  publisher.rs  receiver.rs
src/processors/: mod.rs  test_batch_processor.rs  test_db_processor.rs  test_generator.rs  test_processor.rs  test_protobuf_generator.rs  test_protobuf_processor.rs  test_request_processor.rs
