[package]
name = "rust-rabbitmq"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
amqprs = { version = "1.0.7", features = ["traces", "compliance_assert"] }
anyhow = "1.0.69"
async-trait = "0.1.64"
# aws-config = "0.54.1"
# aws-sdk-appconfigdata = "0.24.0"
clap = { version = "4.1.4", features = ["derive"] }
itertools = "0.10.5"
serde = { version = "1.0.152", features = ["serde_derive"] }
serde_json = "1.0.92"
thiserror = "1.0.38"
tokio = "1.25.0"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
